cmake_minimum_required(VERSION 3.17)
project(LeetCode)

set(CMAKE_CXX_STANDARD 14)

add_executable(LeetCode main.cpp)
add_executable(main3 "String/Medium/3. Longest Substring Without Repeating Characters.cpp")
add_executable(main791 "Array/Medium/791. Custom Sort String.cpp")
add_executable(main11 "Array/Medium/11. Container With Most Water .cpp")